# Pollloop

./: .gitignore  README.md  pyproject.toml
config/: settings.py  settings_base.py  settings_local.py  settings_prod.py  urls.py
form/: models.py  permissions.py  serializer.py  serializers.py  services.py  urls.py  views.py
form/migrations/: 0001_initial.py  0002_initial.py  0003_respondent_is_complete.py  0004_optionsofquestions_option_number.py
user/: models.py  serializers.py  urls.py  views.py
user/management/commands/: seed_users.py
user/migrations/: 0001_initial.py  0002_alter_customuser_age_alter_customuser_profile_and_more.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py  0003_alter_customuser_uuid.py
